--- a/package.json
+++ b/package.json
@@ -3,14 +3,18 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@material-ui/core": "^4.9.9",
+    "@material-ui/core": "^4.9.11",
     "@material-ui/icons": "^4.9.1",
+    "@material-ui/lab": "^4.0.0-alpha.50",
     "bootstrap": "^4.4.1",
+    "clsx": "^1.1.0",
+    "formik": "^2.1.4",
     "react": "^16.11.0",
     "react-bootstrap": "^1.0.0",
     "react-dom": "^16.11.0",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.2.0"
+    "react-scripts": "3.2.0",
+    "yup": "^0.28.3"
   },
   "scripts": {
     "start": "react-scripts start",
