--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
         "axios": "^0.19.2",
         "emotion": "^10.0.27",
         "emotion-theming": "^10.0.27",
+        "jwt-decode": "^2.2.0",
         "lodash": "^4.17.15",
         "react": "^16.11.0",
         "react-dom": "^16.13.1",
@@ -42,5 +43,6 @@
             "last 1 firefox version",
             "last 1 safari version"
         ]
-    }
+    },
+    "proxy": "http://localhost:5000"
 }
