--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
         "server": "nodemon app.js",
         "frontend-install": "npm install --prefix frontend",
         "frontend": "npm start --prefix frontend",
+        "frontend-dev": "concurrently \"npm start\" \"npm run frontend\"",
         "dev": "concurrently \"npm run server\" \"npm run frontend\""
     },
     "author": "",
@@ -22,6 +23,7 @@
         "busboy-body-parser": "^0.3.2",
         "concurrently": "^5.2.0",
         "connect-busboy": "0.0.2",
+        "cors": "^2.8.5",
         "express": "^4.17.1",
         "express-validator": "^6.4.1",
         "jsonwebtoken": "^8.5.1",
